@startuml

Servidor <|--|> Cliente
Servidor <|--|> BancoDePalavras
Servidor <|--|> Players

class Servidor{
Socket
Nome
Retornar Nome do Competidor 1()
Encaminhar Nome do Competidor 2()
Buscar Palavra()
Encaminha Nome dos Competidores()
}

class Cliente{
Nome
Retornar Nome do Competidor 2()
}

class BancoDePalavras{
Palavra
Sortear Palavra()
Retornar Palavra()
}

class Players {
Competidor 1
Competidor 2
Nome dos Competidores
Armazenar Competidor 1()
Armazenar Competidor 2()
Retornar Nome dos Players()

}
@enduml